tests/max_encoded_len_ui/missing_crate_specifier.stderr
error: Invalid attribute: only `#[codec(dumb_trait_bound)]`, `#[codec(crate = path::to::crate)]`, `#[codec(encode_bound(T: Encode))]`, `#[codec(decode_bound(T: Decode))]`, or `#[codec(mel_bound(T: MaxEncodedLen))]` are accepted as top attribute
 --> tests/max_encoded_len_ui/missing_crate_specifier.rs:4:9
  |
4 | #[codec(parity_scale_codec)]
  |         ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Example: WrapperTypeEncode` is not satisfied
  --> tests/max_encoded_len_ui/missing_crate_specifier.rs:5:8
   |
5  | struct Example;
   |        ^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Example`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             String
             Vec<T>
             parity_scale_codec::Ref<'a, T, U>
   = note: required for `Example` to implement `Encode`
note: required by a bound in `MaxEncodedLen`
  --> src/max_encoded_len.rs
   |
   | pub trait MaxEncodedLen: Encode {
   |                          ^^^^^^ required by this bound in `MaxEncodedLen`
